# pypz

./: LICENSE  Makefile  README.md  pyproject.toml
lambdas/: function.py
pypz/: __init__.py  components.py  server.py
